--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: python
 python: 
  - 3.5
 script: 
- - python3 ./nlppypitest/npl.py
+ - python3 ./nlppypitest/nlp_pypitest.py 
+ - pyttest ./nlppypitest
